Fixed bugs in pacman.sh

--- a/CPAchecker/config/generateWitness.properties
+++ b/CPAchecker/config/generateWitness.properties
@@ -1,5 +1,5 @@
 #include predicateAnalysis-PredAbsRefiner-ABEl.properties
-cpa.predicate.solver=MATHSAT5
+solver.solver=MATHSAT5
 cfa.simplifyCfa=false
 cfa.allowBranchSwapping=false
 cpa.predicate.ignoreIrrelevantVariables=false
@@ -10,6 +10,7 @@ coverage.export=true
 coverage.file=coverage.info
 parser.transformTokensToLines=false
 counterexample.export.assumptions.includeConstantsForPointers=false
+cpa.arg.errorPath.file = ErrorPath.txt
 cpa.arg.errorPath.graphml=witness.graphml
 cpa.predicate.handlePointerAliasing=false
 
